--- a/首页.css
+++ b/首页.css
@@ -19,6 +19,10 @@ option{
     color: #000000;
 }
 
+input {
+    border-radius:3px;
+}
+
 body {
     background: url("picture_blueBackgroundOne.jpg"), url("picture_middleBackground.jpg"), url("picture_blueBackgroundTwo.jpg");
     background-repeat: no-repeat, no-repeat, no-repeat;
