--- a/登录.css
+++ b/登录.css
@@ -29,8 +29,9 @@ div.background {
 	position:absolute;
 	left:425px;
 	top:150px;
-	filter:alpha(opacity=70);
-	opacity:0.7;
+	filter:alpha(opacity=95);
+	opacity:0.95;
+	border-radius:5px;
 }
 
 div.transbox {
@@ -40,8 +41,9 @@ div.transbox {
 	padding:0;
 	background-color: #ffffff;
 	border: 0px solid;
-	filter:alpha(opacity=60);
-	opacity:0.6;
+	filter:alpha(opacity=80);
+	opacity:0.8;
+	border-radius:5px;
 }
 
 div.transbox form {
@@ -49,4 +51,35 @@ div.transbox form {
 	color: #000000;
 	font:bold 12px Verdana, Geneva, sans-serif;
 	line-height:1.5;
+	border-radius:10px;
+}
+
+input {
+	border-radius:3px;
+}
+
+input.upLoad {
+	width:120px;
+	height:30px;
+	border:none;
+	background:url(picture_login.jpg);
+	font-size:20px;
+	font-family: Arial;
+	text-align: center;
+	color:#000000;
+	border-radius:3px;
+}
+
+input.upLoad:hover{
+	width:120px;
+	height:30px;
+	border:none;
+	background:url(picture_login.jpg);
+	font-size:20px;
+	font-family: Arial;
+	text-align: center;
+	color:#000000;
+	border-radius:3px;
+	filter:alpha(opacity=80);
+	opacity:0.8;
 }
