--- a/回答.css
+++ b/回答.css
@@ -1,8 +1,9 @@
 ﻿h1 {
     font-size:40px;
-    font-family: 华文楷体;
+    font-family: myFirstFont;
     text-align: center;
     color:#000000;
+	font-weight:900;
 }
 
 a {
@@ -142,4 +143,10 @@ body {
     position: absolute;
     left: 720px;
     top:560px;
+}
+
+@font-face
+{
+    font-family: myFirstFont;
+    src: url('方正瘦金书简体.ttf');
 }
