--- a/注册.css
+++ b/注册.css
@@ -1,8 +1,9 @@
 ﻿h1 {
     font-size:40px;
-    font-family: 华文楷体;
+    font-family: myFirstFont;
     text-align: center;
     color:#000000;
+	font-weight:900;
 }
 
 p {
@@ -47,4 +48,10 @@ input.upLoad:hover{
     border-radius:3px;
     filter:alpha(opacity=80);
     opacity:0.8;
+}
+
+@font-face
+{
+    font-family: myFirstFont;
+    src: url('方正瘦金书简体.ttf');
 }
