--- a/注册.css
+++ b/注册.css
@@ -1,9 +1,8 @@
 ﻿h1 {
     font-size:40px;
-    font-family: myFirstFont;
+    font-family: 华文楷体;
     text-align: center;
     color:#000000;
-	font-weight:900;
 }
 
 p {
@@ -14,14 +13,11 @@ p {
 }
 
 body {
-    background: url("picture_blueBackgroundOne.jpg"), url("picture_middleBackground.jpg"), url("picture_blueBackgroundTwo.jpg");
-    background-repeat: no-repeat, no-repeat, no-repeat;
-    background-size: 100% 200px, 100% 200px, 100% 300px;
-    background-position: 0 0, 0 200px, 0 400px;
-}
-
-input {
-    border-radius:3px;
+    background: url("picture_blueBackgroundOne.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-position: 0 0;
+    background-attachment: fixed;
 }
 
 input.upLoad {
@@ -50,8 +46,46 @@ input.upLoad:hover{
     opacity:0.8;
 }
 
-@font-face
-{
-    font-family: myFirstFont;
-    src: url('方正瘦金书简体.ttf');
+input.search {
+    width:200px;
+    height:20px;
+    border:solid 1px;
+    font-size:15px;
+    font-family: Arial;
+    color:#000000;
+    border-radius:3px;
+}
+
+div.background {
+    background: url("picture_background.jpg");
+    width: 400px;
+    height: 350px;
+    margin:15px;
+    border: 0px solid;
+    position:absolute;
+    left:425px;
+    top:150px;
+    filter:alpha(opacity=95);
+    opacity:0.95;
+    border-radius:5px;
+}
+
+div.transbox {
+    width: 338px;
+    height: 300px;
+    margin:30px;
+    padding:0;
+    background-color: #ffffff;
+    border: 0px solid;
+    filter:alpha(opacity=80);
+    opacity:0.8;
+    border-radius:5px;
+}
+
+div.transbox form {
+    margin: 30px 40px;
+    color: #000000;
+    font:bold 12px Verdana, Geneva, sans-serif;
+    line-height:1.5;
+    border-radius:10px;
 }
