--- a/登录.css
+++ b/登录.css
@@ -1,9 +1,8 @@
 ﻿h1 {
     font-size:40px;
-    font-family: myFirstFont;
+    font-family: 微软雅黑;
     text-align: center;
     color:#000000;
-	font-weight:900;
 }
 
 p {
@@ -19,7 +18,8 @@ body {
 	background-repeat:no-repeat;
 	background-position: center;
 	background-attachment:fixed;
-	text-align:center;
+	filter:alpha(opacity=95);
+	opacity:0.95;
 }
 	
 div.background {
@@ -84,10 +84,4 @@ input.upLoad:hover{
 	border-radius:3px;
 	filter:alpha(opacity=80);
 	opacity:0.8;
-}
-
-@font-face
-{
-    font-family: myFirstFont;
-    src: url('方正瘦金书简体.ttf');
 }
