--- a/首页.css
+++ b/首页.css
@@ -1,9 +1,8 @@
 ﻿h1 {
     font-size:40px;
-    font-family: myFirstFont;
+    font-family: 华文楷体;
     text-align: center;
     color:#000000;
-	font-weight:900;
 }
 
 p {
@@ -25,10 +24,11 @@ input {
 }
 
 body {
-    background: url("picture_blueBackgroundOne.jpg"), url("picture_middleBackground.jpg"), url("picture_blueBackgroundTwo.jpg");
-    background-repeat: no-repeat, no-repeat, no-repeat;
-    background-size: 100% 200px, 100% 200px, 100% 300px;
-    background-position: 0 0, 0 200px, 0 400px;
+    background: url("picture_blueBackgroundOne.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-position: 0 0;
+    background-attachment: fixed;
 }
 
 @keyframes toRotateOne
@@ -83,8 +83,50 @@ body {
     top:560px;
 }
 
-@font-face
-{
-    font-family: myFirstFont;
-    src: url('方正瘦金书简体.ttf');
+input.upLoad {
+    width:120px;
+    height:30px;
+    border:none;
+    background:url(picture_login.jpg);
+    font-size:20px;
+    font-family: Arial;
+    text-align: center;
+    color:#000000;
+    border-radius:3px;
+}
+
+input.upLoad:hover {
+    width: 120px;
+    height: 30px;
+    border: none;
+    background: url(picture_login.jpg);
+    font-size: 20px;
+    font-family: Arial;
+    text-align: center;
+    color: #000000;
+    border-radius: 3px;
+    filter: alpha(opacity=80);
+    opacity: 0.8;
+}
+
+input.search {
+    width:300px;
+    height:20px;
+    border:none;
+    background-color: lightskyblue;
+    font-size:15px;
+    font-family: Arial;
+    color:#000000;
+    border-radius:3px;
+}
+
+select.selection {
+    width:70px;
+    height:20px;
+    border:none;
+    background-color: lightskyblue;
+    font-size:15px;
+    font-family: Arial;
+    color:#000000;
+    border-radius:3px;
 }
