--- a/首页（登录）.css
+++ b/首页（登录）.css
@@ -48,6 +48,7 @@ body {
     position: absolute;
     left:100px;
     top:450px;
+    cursor: pointer;
 }
 
 #second {
@@ -62,6 +63,7 @@ body {
     position: absolute;
     left:300px;
     top:450px;
+    cursor: pointer;
 }
 
 #textOne {
@@ -106,6 +108,7 @@ input.upLoad:hover {
     border-radius: 3px;
     filter: alpha(opacity=80);
     opacity: 0.8;
+    cursor: pointer;
 }
 
 input.search {
