--- a/个人中心.css
+++ b/个人中心.css
@@ -51,6 +51,7 @@ body {
     position: absolute;
     left: 100px;
     top: 450px;
+    cursor:pointer;
 }
 
 
@@ -66,6 +67,7 @@ body {
     position: absolute;
     left:300px;
     top:450px;
+    cursor: pointer;
 }
 
 #textOne {
@@ -83,32 +85,32 @@ body {
 #itemOne {
     width: 90px;
     height: 50px;
-    background-color: lightskyblue;
-    border:0 solid;
+    border:1px solid;
     position: absolute;
     left:100px;
     top:100px;
     border-radius:3px;
+    cursor:pointer;
 }
 
 #itemTwo {
     width: 150px;
     height: 50px;
-    background-color: lightskyblue;
-    border:0 solid;
+    border:1px solid;
     position: absolute;
     left:200px;
     top:100px;
     border-radius:3px;
+    cursor:pointer;
 }
 
 #itemThree {
     width: 150px;
     height: 50px;
-    background-color: lightskyblue;
-    border: 0 solid;
+    border: 1px solid;
     position: absolute;
     left: 360px;
     top: 100px;
     border-radius:3px;
+    cursor:pointer;
 }
