--- a/回答.css
+++ b/回答.css
@@ -143,3 +143,63 @@ body {
     left: 720px;
     top:560px;
 }
+
+input.upLoad {
+    width:120px;
+    height:30px;
+    border:none;
+    background:url(picture_login.jpg);
+    font-size:20px;
+    font-family: Arial;
+    text-align: center;
+    color:#000000;
+    border-radius:3px;
+}
+
+input.upLoad:hover{
+    width:120px;
+    height:30px;
+    border:none;
+    background:url(picture_login.jpg);
+    font-size:20px;
+    font-family: Arial;
+    text-align: center;
+    color:#000000;
+    border-radius:3px;
+    filter:alpha(opacity=80);
+    opacity:0.8;
+}
+
+div.background {
+    background: url("picture_background.jpg");
+    width: 600px;
+    height: 700px;
+    margin:15px;
+    border: 0px solid;
+    position:absolute;
+    left:425px;
+    top:150px;
+    filter:alpha(opacity=95);
+    opacity:0.95;
+    border-radius:5px;
+}
+
+div.transbox {
+    width: 500px;
+    height: 700px;
+    margin:30px;
+    padding:0;
+    background-color: #ffffff;
+    border: 0px solid;
+    filter:alpha(opacity=80);
+    opacity:0.8;
+    border-radius:5px;
+}
+
+div.transbox form {
+    margin: 30px 40px;
+    color: #000000;
+    font:bold 12px Verdana, Geneva, sans-serif;
+    line-height:1.5;
+    border-radius:10px;
+}
