--- a/注册.css
+++ b/注册.css
@@ -1,9 +1,11 @@
 ﻿h1 {
     font-size:40px;
-    font-family: 华文楷体;
+    font-family: myFirstFont;
     text-align: center;
     color:#000000;
+	font-weight:900;
 }
+
 
 p {
     font-size:20px;
@@ -89,4 +91,10 @@ div.transbox form {
     font:bold 12px Verdana, Geneva, sans-serif;
     line-height:1.5;
     border-radius:10px;
+}
+
+@font-face
+{
+    font-family: myFirstFont;
+    src: url('方正瘦金书简体.ttf');
 }
