--- a/首页.css
+++ b/首页.css
@@ -1,8 +1,9 @@
 ﻿h1 {
     font-size:40px;
-    font-family: 华文楷体;
+    font-family: myFirstFont;
     text-align: center;
     color:#000000;
+	font-weight:900;
 }
 
 p {
@@ -138,4 +139,10 @@ form {
     border:none;
     background: url("picture_background.jpg");
     border-radius:3px;
+}
+
+@font-face
+{
+    font-family: myFirstFont;
+    src: url('方正瘦金书简体.ttf');
 }
