--- a/个人中心.css
+++ b/个人中心.css
@@ -1,8 +1,9 @@
 h1 {
     font-size:40px;
-    font-family: 华文楷体;
+    font-family: myFirstFont;
     text-align: center;
     color:#000000;
+	font-weight:900;
 }
 
 p {
@@ -113,4 +114,10 @@ body {
     top: 100px;
     border-radius:3px;
     cursor:pointer;
+}
+
+@font-face
+{
+    font-family: myFirstFont;
+    src: url('方正瘦金书简体.ttf');
 }
