--- a/个人信息.css
+++ b/个人信息.css
@@ -1,10 +1,10 @@
 h1 {
     font-size:40px;
-    font-family: 华文楷体;
+    font-family: myFirstFont;
     text-align: center;
     color:#000000;
+	font-weight:900;
 }
-
 p {
     font-size:20px;
     font-family: 微软雅黑;
@@ -110,4 +110,10 @@ body {
     left: 430px;
     top: 100px;
     border-radius:3px;
+}
+
+@font-face
+{
+    font-family: myFirstFont;
+    src: url('方正瘦金书简体.ttf');
 }
