--- a/回答.css
+++ b/回答.css
@@ -1,8 +1,9 @@
 ﻿h1 {
     font-size:40px;
-    font-family: 华文楷体;
+    font-family: myFirstFont;
     text-align: center;
     color:#000000;
+	font-weight:900;
 }
 
 a {
@@ -202,4 +203,10 @@ div.transbox form {
     font:bold 12px Verdana, Geneva, sans-serif;
     line-height:1.5;
     border-radius:10px;
+}
+
+@font-face
+{
+    font-family: myFirstFont;
+    src: url('方正瘦金书简体.ttf');
 }
