--- a/登录.css
+++ b/登录.css
@@ -1,8 +1,9 @@
 ﻿h1 {
     font-size:40px;
-    font-family: 微软雅黑;
+    font-family: myFirstFont;
     text-align: center;
     color:#000000;
+	font-weight:900;
 }
 
 p {
@@ -85,4 +86,10 @@ input.upLoad:hover{
 	filter:alpha(opacity=80);
 	opacity:0.8;
 	cursor:pointer;
+}
+
+@font-face
+{
+    font-family: myFirstFont;
+    src: url('方正瘦金书简体.ttf');
 }
