--- a/首页（登录）.css
+++ b/首页（登录）.css
@@ -3,6 +3,7 @@
     font-family: myFirstFont;
     text-align: center;
     color:#000000;
+	font-weight:900;
 }
 
 p {
@@ -137,4 +138,10 @@ form {
     border:none;
     background: url("picture_background.jpg");
     border-radius:3px;
+}
+
+@font-face
+{
+    font-family: myFirstFont;
+    src: url('方正瘦金书简体.ttf');
 }
