--- a/注册.css
+++ b/注册.css
@@ -1,100 +1,9 @@
-﻿h1 {
-    font-size:40px;
-    font-family: myFirstFont;
-    text-align: center;
-    color:#000000;
-	font-weight:900;
-}
-
-
-p {
-    font-size:20px;
-    font-family: 微软雅黑;
-    text-align: center;
-    color: #000000;
-}
-
-body {
-    background: url("picture_blueBackgroundOne.jpg");
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    background-position: 0 0;
-    background-attachment: fixed;
-}
-
-input.upLoad {
-    width:120px;
-    height:30px;
-    border:none;
-    background:url(picture_login.jpg);
-    font-size:20px;
-    font-family: Arial;
-    text-align: center;
-    color:#000000;
-    border-radius:3px;
-}
-
-input.upLoad:hover{
-    width:120px;
-    height:30px;
-    border:none;
-    background:url(picture_login.jpg);
-    font-size:20px;
-    font-family: Arial;
-    text-align: center;
-    color:#000000;
-    border-radius:3px;
-    filter:alpha(opacity=80);
-    opacity:0.8;
-    cursor:pointer;
-}
-
-input.search {
-    width:200px;
-    height:20px;
-    border:solid 1px;
-    font-size:15px;
-    font-family: Arial;
-    color:#000000;
-    border-radius:3px;
-}
-
-div.background {
-    background: url("picture_background.jpg");
+﻿div.background {
     width: 400px;
-    height: 350px;
-    margin:15px;
-    border: 0px solid;
-    position:absolute;
-    left:425px;
-    top:150px;
-    filter:alpha(opacity=95);
-    opacity:0.95;
-    border-radius:5px;
+    height: 440px;
 }
 
 div.transbox {
     width: 338px;
-    height: 300px;
-    margin:30px;
-    padding:0;
-    background-color: #ffffff;
-    border: 0px solid;
-    filter:alpha(opacity=80);
-    opacity:0.8;
-    border-radius:5px;
-}
-
-div.transbox form {
-    margin: 30px 40px;
-    color: #000000;
-    font:bold 12px Verdana, Geneva, sans-serif;
-    line-height:1.5;
-    border-radius:10px;
-}
-
-@font-face
-{
-    font-family: myFirstFont;
-    src: url('方正瘦金书简体.ttf');
+    height: 380px;
 }
