--- a/登录.css
+++ b/登录.css
@@ -1,95 +1,14 @@
-﻿h1 {
-    font-size:40px;
-    font-family: myFirstFont;
-    text-align: center;
-    color:#000000;
-	font-weight:900;
+﻿form {
+	width:240px;
+	height:150px;
 }
 
-p {
-    font-size:20px;
-    font-family: 微软雅黑;
-    text-align: center;
-    color: #000000;
-}
-
-body {
-	background-image: url("picture_firstBackground.jpg");
-	background-size:100%;
-	background-repeat:no-repeat;
-	background-position: center;
-	background-attachment:fixed;
-	filter:alpha(opacity=95);
-	opacity:0.95;
-}
-	
 div.background {
-	background: url("picture_background.jpg");
 	width: 400px;
-	height: 266px;
-	margin:15px;
-	border: 0px solid;
-	position:absolute;
-	left:425px;
-	top:150px;
-	filter:alpha(opacity=95);
-	opacity:0.95;
-	border-radius:5px;
+	height: 310px;
 }
 
 div.transbox {
-	width: 338px;
-	height: 204px;
-	margin:30px;
-	padding:0;
-	background-color: #ffffff;
-	border: 0px solid;
-	filter:alpha(opacity=80);
-	opacity:0.8;
-	border-radius:5px;
-}
-
-div.transbox form {
-	margin: 30px 40px;
-	color: #000000;
-	font:bold 12px Verdana, Geneva, sans-serif;
-	line-height:1.5;
-	border-radius:10px;
-}
-
-input {
-	border-radius:3px;
-}
-
-input.upLoad {
-	width:120px;
-	height:30px;
-	border:none;
-	background:url(picture_login.jpg);
-	font-size:20px;
-	font-family: Arial;
-	text-align: center;
-	color:#000000;
-	border-radius:3px;
-}
-
-input.upLoad:hover{
-	width:120px;
-	height:30px;
-	border:none;
-	background:url(picture_login.jpg);
-	font-size:20px;
-	font-family: Arial;
-	text-align: center;
-	color:#000000;
-	border-radius:3px;
-	filter:alpha(opacity=80);
-	opacity:0.8;
-	cursor:pointer;
-}
-
-@font-face
-{
-    font-family: myFirstFont;
-    src: url('方正瘦金书简体.ttf');
+	width: 340px;
+	height: 250px;
 }
