--- a/首页（登录）.css
+++ b/首页（登录）.css
@@ -1,147 +1,25 @@
-﻿h1 {
-    font-size:40px;
-    font-family: myFirstFont;
-    text-align: center;
-    color:#000000;
-	font-weight:900;
+form {
+    width:400px;
+    height:160px;
 }
 
-p {
-    font-size:20px;
-    font-family: 微软雅黑;
-    text-align: center;
-    color: #000000;
-}
-
-input {
-    border-radius:3px;
-}
-
-body {
-    background: url("picture_blueBackgroundOne.jpg");
+img {
+    width: 60px;
+    height: 60px;
     background-repeat: no-repeat;
-    background-size: 100% 100%;
-    background-position: 0 0;
-    background-attachment: fixed;
-}
-
-@keyframes toRotateOne
-{
-    from {transform: rotate(0deg)}
-    to {transform: rotate(-20deg)}
-}
-
-@keyframes toRotateTwo
-{
-    from {transform: rotate(-20deg)}
-    to {transform: rotate(0deg)}
+    background-position: center;
+    background-size: 60px 60px;
+    border:1px solid;
+    border-radius:30px;
+    position: absolute;
+    left: 480px;
+    top: 280px;
 }
 
 #first {
-    width: 120px;
-    height: 120px;
-    background: url("picture_id.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 120px 120px;
-    border:0 solid;
-    border-radius:60px;
-    position: absolute;
-    left:100px;
-    top:450px;
-    cursor: pointer;
+    background: url("picture_center.jpg");
 }
 
 #second {
-    width: 120px;
-    height: 120px;
-    background: url("picture_ask.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 120px 120px;
-    border:0 solid;
-    border-radius:60px;
-    position: absolute;
-    left:300px;
-    top:450px;
-    cursor: pointer;
-}
-
-#textOne {
-    position: absolute;
-    left: 120px;
-    top:560px;
-}
-
-#textTwo {
-    position: absolute;
-    left: 320px;
-    top:560px;
-}
-
-@font-face
-{
-    font-family: myFirstFont;
-    src: url('方正瘦金书简体.ttf');
-}
-
-input.upLoad {
-    width:120px;
-    height:30px;
-    border:none;
-    background:url(picture_login.jpg);
-    font-size:20px;
-    font-family: Arial;
-    text-align: center;
-    color:#000000;
-    border-radius:3px;
-}
-
-input.upLoad:hover {
-    width: 120px;
-    height: 30px;
-    border: none;
-    background: url(picture_login.jpg);
-    font-size: 20px;
-    font-family: Arial;
-    text-align: center;
-    color: #000000;
-    border-radius: 3px;
-    filter: alpha(opacity=80);
-    opacity: 0.8;
-    cursor: pointer;
-}
-
-input.search {
-    width:300px;
-    height:20px;
-    border:none;
-    font-size:15px;
-    font-family: Arial;
-    color:#000000;
-    border-radius:3px;
-}
-
-select.selection {
-    width:70px;
-    height:20px;
-    border:none;
-    font-size:15px;
-    font-family: Arial;
-    color:#000000;
-    border-radius:3px;
-}
-
-form {
-    width:400px;
-    height:100px;
-    border:none;
-    background: url("picture_background.jpg");
-    border-radius:3px;
-}
-
-@font-face
-{
-    font-family: myFirstFont;
-    src: url('方正瘦金书简体.ttf');
+    background: url("picture_ask.jpg");
 }
