--- a/搜索.css
+++ b/搜索.css
@@ -1,19 +1,16 @@
+form {
+    width: 400px;
+    height: 160px;
+}
+
 #first {
     background: url("picture_checkOut.jpg");
 }
 
 #second {
-    background: url("picture_ask.jpg");
-}
-
-#three {
     background: url("picture_center.jpg");
 }
 
-#four {
-    background: url("picture_search.jpg");
-}
-
-#five {
+#three {
     background: url("picture_first.jpg");
 }
