--- a/个人信息.css
+++ b/个人信息.css
@@ -6,6 +6,10 @@
     background: url("picture_ask.jpg");
 }
 
+#three {
+    background: url("picture_first.jpg");
+}
+
 #itemOne {
     width: 150px;
     height: 50px;
