--- a/注册.css
+++ b/注册.css
@@ -1,9 +1,9 @@
 ﻿div.background {
     width: 400px;
     height: 440px;
-}
+}/*透明框背景的长宽*/
 
 div.transbox {
     width: 338px;
     height: 380px;
-}
+}/*透明框长宽*/
